--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,8 @@
+.responsiveBody{
+	padding-top:2em;
+	padding-left:10%;
+	padding-right:10%;
+}
 ul.form-list li{
 	padding-left:2em;
 	line-height: 2em;
