--- a/css/kbia-brand.css
+++ b/css/kbia-brand.css
@@ -2,10 +2,15 @@
 	background-color:#006af3;
 	width:100%;
 	height:4em;
-	display:table-cell;
-	vertical-align:middle;
-	text-align:center;
 }
 #kbiaHeader img{
-	max-height:80%;
+ display: block;
+ position: absolute;
+ top: 50%;
+ left: 50%;
+ transform: translate(-50%, -50%);
+ -webkit-transform: translate(-50%, -50%); /* Safari and Chrome */
+ -moz-transform: translate(-50%, -50%); /* Firefox */
+ -ms-transform: translate(-50%, -50%); /* IE 9 */
+ -o-transform: translate(-50%, -50%); /* Opera */
 }
