--- a/css/kbia-brand.css
+++ b/css/kbia-brand.css
@@ -4,8 +4,6 @@
 	height:4em;
 }
 #kbiaHeader img{
- display: block;
- position: absolute;
- top: 50%;
- left: 50%;
+	max-height:100%;
+	max-width:100%;
 }
