--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,8 @@
+@import url(https://fonts.googleapis.com/css?family=Open+Sans);
+h1{
+	font-family:"Open Sans",sans-serif;
+	font-size:2em;
+}
 .responsiveBody{
 	padding-top:2em;
 	padding-left:10%;
