--- a/css/kbia-brand.css
+++ b/css/kbia-brand.css
@@ -2,6 +2,8 @@
 	background-color:#006af3;
 	width:100%;
 	height:4em;
+	text-align:center;
+	padding-bottom:1em;
 }
 #kbiaHeader img{
 	max-height:80%;
