Padding and centering

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,7 @@
 h1{
 	font-family:"Open Sans",sans-serif;
 	font-size:2em;
+	text-align:center;
 }
 .responsiveBody{
 	font-family:"Open Sans",sans-serif;
